@@ -4,6 +4,7 @@
 ^config/
 ^configure$
 ^config\.(guess|h|h\.in|log|status|sub)
+^lib/
 ^libtool$
 ^m4/
 Makefile\.in$
