@@ -2,8 +2,9 @@ tenace (0.10) upstream; urgency=low
 
   * Yet another GUI change, now using GtkBuilder.
   * Port to dds 1.2.0.
+  * Use gnulib to import "nproc".
 
- -- Christoph Berg <myon@debian.org>  Wed, 14 Apr 2010 22:37:21 +0200
+ -- Christoph Berg <myon@debian.org>  Sat, 17 Apr 2010 17:02:21 +0200
 
 tenace (0.9) upstream; urgency=low
 
